--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,4 +1,4 @@
 $breakpoint-sm: 48rem; /** 768px **/
 $breakpoint-md: 64rem; /** 1024px **/
-$breakpoint-lg: 90rem; /** 1440px **/
-$breakpoint-xl: 120rem; /** 1920px **/
+$breakpoint-lg: 75rem; /** 1200px **/
+$breakpoint-xl: 85rem; /** 1360px **/
